--- a/package.json
+++ b/package.json
@@ -1,5 +1,21 @@
 {
+  "name": "vite-project",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "bootstrap": "^5.3.3"
+    "axios": "^1.2.2",
+    "vue": "^3.2.45"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^4.0.0",
+    "sass": "^1.57.1",
+    "scss": "^0.2.4",
+    "vite": "^4.0.0"
   }
 }
